@@ -554,7 +554,7 @@ unsigned char *all_key = (unsigned char *) _("aA");
 unsigned char *list_key = (unsigned char *) _("eE");
 unsigned char *replace_key = (unsigned char *) _("rR");
 unsigned char *backwards_key = (unsigned char *) _("bB");
-unsigned char *ignore_key = (unsigned char *) _("iI");
+unsigned char *ignore_key = (unsigned char *) _("|ignore case|iI");
 unsigned char *block_key = (unsigned char *) _("kK");
 unsigned char *noignore_key = (unsigned char *) _("sS");
 unsigned char *wrap_key = (unsigned char *) _("wW");
